testsuite/tests/ghc-regress/indexed-types/should_fail/all.T
setTestOpts(only_compiler_types(['ghc']))
setTestOpts(omit_ways(['opt', 'optasm']))

test('Simple1a', expect_broken(1331), compile_fail, [''])
test('Simple1b', normal, compile_fail, [''])
test('Simple2a', normal, compile_fail, [''])
test('Simple2b', normal, compile_fail, [''])
test('Simple3a', normal, compile_fail, [''])
test('Simple3b', normal, compile_fail, [''])
test('Simple4', normal, compile_fail, [''])
test('Simple5a', expect_broken(1331), compile_fail, [''])
test('Simple5b', expect_broken(1331), compile_fail, [''])
test('Simple6', normal, compile_fail, [''])
test('Simple7', expect_broken(1331), compile_fail, [''])
test('Simple8', normal, compile_fail, [''])
test('Simple9', expect_broken(1331), compile_fail, [''])
test('Simple10', expect_broken(1331), compile_fail, [''])
test('Simple11a', expect_broken(1331), compile_fail, [''])
test('Simple11b', expect_broken(1331), compile_fail, [''])
test('Simple11c', expect_broken(1331), compile_fail, [''])
test('Simple11d', expect_broken(1331), compile_fail, [''])
test('Over', expect_broken(1331), multimod_compile_fail, ['OverD', '-no-hs-main -no-link'])

clean(['OverA.hi', 'OverA.o', 'OverB.hi', 'OverB.o', 'OverC.hi', 'OverC.o'])
